--- a/MySQL/데이터베이스 필수용어.md
+++ b/MySQL/데이터베이스 필수용어.md
@@ -1,5 +1,5 @@
 ### 데이터베이스 모델링
-현실세계에서 사용되는 데이터를 MySQL에 어떻게 옮겨 놓을 것인지를 결정하는 과정
+현실세계에서 사용되는 데이터를 MySQL에 어떻게 옮겨 놓을 것인지를 결정하는 과정<br>
 > **EXAMPLE**
 > 사람의 신분을 증명하기 위해서는 신분증에 이름, 주민번호, 주소 등의 정보가 있는 것과 비슷한 개념
 
@@ -7,12 +7,12 @@
 
 ![이것이MySQL이다(8.0)](https://images.velog.io/images/ong_hh/post/76fdd1b7-e510-475d-8c28-9b93ddbb440d/image.png)
 
-**PK(Primary Key)** : null값이면 안 되고, 중복이면 안 된다.
-**행** : 데이터의 건 수
-**열** : 이름, 각각의 열에는 데이터 형식이 지정
-**테이블** : 데이터베이스 안에 존재(DBMS안에 있는게 아님)
-**데이터베이스** : 테이블이 저장되는 저장소, 데이터의 저장소
-**DBMS** : 데이터베이스를 관리하는 소프트웨어
-**SQL** : DBMS와 사람이 소통하게 해주는 언어
+**PK(Primary Key)** : null값이면 안 되고, 중복이면 안 된다.<br>
+**행** : 데이터의 건 수<br>
+**열** : 이름, 각각의 열에는 데이터 형식이 지정<br>
+**테이블** : 데이터베이스 안에 존재(DBMS안에 있는게 아님)<br>
+**데이터베이스** : 테이블이 저장되는 저장소, 데이터의 저장소<br>
+**DBMS** : 데이터베이스를 관리하는 소프트웨어<br>
+**SQL** : DBMS와 사람이 소통하게 해주는 언어<br>
 
 
