--- a/MySQL/데이터베이스 필수용어.md
+++ b/MySQL/데이터베이스 필수용어.md
@@ -1,7 +1,7 @@
 ### 데이터베이스 모델링
 현실세계에서 사용되는 데이터를 MySQL에 어떻게 옮겨 놓을 것인지를 결정하는 과정<br>
-> **EXAMPLE**
-> 사람의 신분을 증명하기 위해서는 신분증에 이름, 주민번호, 주소 등의 정보가 있는 것과 비슷한 개념
+> **EXAMPLE**<br>
+> 사람의 신분을 증명하기 위해서는 신분증에 이름, 주민번호, 주소 등의 정보가 있는 것과 비슷한 개념<br>
 
 ### DBMS(MySQL)
 
