--- a/MySQL/데이터베이스 개체.md
+++ b/MySQL/데이터베이스 개체.md
@@ -24,14 +24,14 @@ CREATE INDEX idx_indexTBL_firstname ON indexTBL(first_name);
 ```sql
 SELECT * FROM indexTBL WHERE first_name = 'Mary';
 ```
-을 다시 드래그 해서 번개모양 눌러준다. 
-**결과값은 바뀌지 않는다. **
+을 다시 드래그 해서 번개모양 눌러준다.<br> 
+**결과값은 바뀌지 않는다.**
 
 ![](https://images.velog.io/images/ong_hh/post/9246ff38-69a4-4b46-af39-f652cfbb2102/image.png)
 
 ## 뷰(View)
 가상의 테이블(테이블처럼 보이지만 테이블은 아니다.) _테이블에 링크된 개념_
-> **EXAMPLE**
+> **EXAMPLE**<br> 
 > 아르바이트생에게 테이블 전체 내용을 공개할 순 없을 때, 테이블의 몇 가지 정보만 뽑아서 뷰를 생성한다. 뷰는 실제로 있는 것이 아니라, 회원 테이블의 링크 개념이므로 실제 데이터는 회원 테이블에만 존재하기 때문에 데이터의 중복이 발생되지 않는다. 또한, 아르바이트생은 뷰에만 접근 권한을 줘서 회원들의 중요한 정보는 아예 볼 수 없다. 만약 아르바이트생을 위한 테이블을 또 만들게 된다면 동일한 데이터가 두 테이블에 존재하게 되어 데이터의 중복이 발생한다.
 
 #### 뷰 만들기
@@ -70,7 +70,7 @@ BEGIN
 END //
 DELIMITER ;
 ```
->**DELIMITER**
+>**DELIMITER**<br> 
 DELIMITER는 직역하면 '구문 문자'로 'C'나 'JAVA'의 ';'(세미콜론)이라고 생각하면 된다.
 즉, **문법의 끝을 나타내는 역할을 한다.**
 BEGIN과 END사이에 세미콜론을 사용했기 때문에 DELIMITER를 설정하지 않으면 문장을 구분하기가 어려워진다. 또한 구문 문자를 또 세미콜론으로 지정하는 것도 문장을 구분하기 어렵게 하므로 세미콜론이 아닌 //로 설정한 것이다. 마지막에 DELIMITER 명령어를 다시 사용한 이유는 다시 세미콜론을 이용하여 문장을 구분하기 위해서다.
@@ -81,8 +81,8 @@ CALL myProc();
 ```
 ## 트리거(Trigger)
 다른 테이블에 부착되어서 테이블에 INSERT나 UPDATE 또는 DELETE 작업이 발생되면 실행되는 코드
->**EXAMPLE**
-'당탕이'라는 학생이 자퇴를 하려고 한다. 학생 테이블에서 삭제를 하면 '당탕이'의 정보가 삭제되긴 하지만 '당탕이'가 자퇴생인지 아닌지도 모르게 된다. 따라서 '당탕이'를 학생테이블에서는 삭제하고 자퇴생테이블에 **자동으로 **  추가시키는 것
+>**EXAMPLE**<br> 
+'당탕이'라는 학생이 자퇴를 하려고 한다. 학생 테이블에서 삭제를 하면 '당탕이'의 정보가 삭제되긴 하지만 '당탕이'가 자퇴생인지 아닌지도 모르게 된다. 따라서 '당탕이'를 학생테이블에서는 삭제하고 자퇴생테이블에 **자동으로**  추가시키는 것
 
 #### 자동으로 추가시킬 테이블 만들기
 ```sql
