--- a/정처기/1과목/객체지향.md
+++ b/정처기/1과목/객체지향.md
@@ -44,3 +44,28 @@
 - 부모와 자식 클래스 간 관계를 슈퍼클래스와 서브 클래스로 유지
 - 부모 클래스는 추상적이며, 자식 클래스는 구체적 성질 가짐
 
+# 객체지향 분석
+**객체지향 분석(OOA; Object Oriented Analysis)** 은 사용자의 요구사항을 분석하여 __요구된 문제와 관련된 모든 클래스(객체), 이와 연관된 속성과 연선, 그들 간의 관계 등을 정의하여 모델링하는 작업__ 을 의미. 객체는 클래스로부터 인스턴스화되고, 이 클래스를 식별하는 것이 객체지향 분석의 주요한 목적.
+
+### 럼바우(Rumbaugh)방법
+모든 소프트웨어 구성 요소를 그래픽 표기법을 이용하여 모델링하는 기법으로, 객체 모델링 기법(Object Modeling Technique)라고도 한다.<br><br>
+분석활동은 객체모델링 > 동적 모델링 > 기능 모델링 순으로 통해 이루어진다.
+
+||Runbaugh분석 기법: 객체>동적>기능|
+|---|---|
+|객체모델링<br>(Object Modeling)|정보 모델링이라고도 하며 시스템에서 요구되는 객체를 찾아내어 속성과 연산 식별 및 객체들 간의 관계를 규정하여 **객체 다이어그램**으로 표시하는 것|
+|동적모델링<br>(Dynamic Modeling)|**상태 다이어그램(상태도)** 을 이용하여 시간의 흐름에 따른 객체들 간의 제어 흐름, 상호 작용, 동작 순서 등의 동적인 행위를 표현하는 모델링|
+|기능모델링<br>(Functional Modeling)| **자료 흐름도(DFD)** 를 이용하여 다수의 프로세스들 간의 자료 흐름을 중심으로 처리 과정을 표현한 모델링|
+
+### 부치(Booch)방법
+미시적(Micro) 개발 프로세스와 거시적(Macro) 개발 프로세스를 모두 사용하는 분석 방법으로, 클래스와 객체들을 분석 및 식별하고 클래스의 속성과 연산을 정의한다.
+
+### Jacobson방법
+Use Case를 강조하여 사용하는 분석 방법이다.
+
+### Coad와 Yourdon방법
+E-R 다이어그램을 사용하여 객체의 행위를 모델링하며, 객체 식별, 구조 식별, 주제 정의, 속성과 인스턴스 연결 정의, 연산과 메시지 연결 정의 등의 과정으로 구성하는 기법
+
+### Wirfs-Brock방법
+분석과 설계 간의 구분이 없고, 고객 명세서를 평가해서 설계 작업까지 연속적으로 수행하는 기법
+
